--- a/nosotros.html
+++ b/nosotros.html
@@ -54,4 +54,13 @@
                 </div>
             </div>
         </section>
+	    
+		<head>
+		<body>
+		<div align="center"> 
+		<iframe width="560" height="315" src="https://www.youtube.com/embed/wHy-p1Q39AU" title="YouTube video player" 
+		frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+		allowfullscreen></iframe>
+		</div>
+		</head>
 			
